# streetaqi

./: .gitignore  Makefile  README.md  pyproject.toml
data/rider/delhi/: readings.json
data/rider/export-2026-05-24/: manifest.json
output/analysis/: analysis_data.parquet  stop_stats.parquet
output/analysis/figs/: fig1_map.html
output/analysis/tabs/: table1_summary.tex  table2_threshold_exceedance.tex  table3_category_distribution.tex
src/streetaqi/: __init__.py  analyze.py  annotate.py  cli.py  viewer.py
